--- a/ceramic.html
+++ b/ceramic.html
@@ -26,7 +26,7 @@
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
                         <a class="navbar-brand" href="/index.html">
-                            <img src="/images/Detail BLVD logo WO.webp">
+                            <img src="images/Detail BLVD logo WO.webp">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
