--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="stylesheet" href="css/style.css">
 
 
 </head>
@@ -127,23 +127,22 @@
                         <div class="col-lg-4">
                             <h2>Precision</h2>
                             <img src="images/precision.svg" style="width: 30%">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, non illum! Vero
-                                magni saepe necessitatibus consequuntur, eveniet cupiditate non error iste rerum animi
-                                quasi eum mollitia officia voluptatum obcaecati vel.</p>
+                            <p>
+                                    Here at Detail Blvd, we respect your trust. We believe in fairness, accuracy and caring for your vehicle as if it were our own. Expect nothing less than top-tier quality and precision within all our services to elevate the industry standards to an entire new level. 
+                                    </p>
                         </div>
                         <div class="col-lg-4">
                             <h2>Passion</h2>
                             <img src="images/heart-outline.svg" style="width: 30%">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, non illum! Vero
-                                magni saepe necessitatibus consequuntur, eveniet cupiditate non error iste rerum animi
-                                quasi eum mollitia officia voluptatum obcaecati vel.</p>
+                            <p>What sets us apart from the rest is our deep-rooted passion for our trades to consistently deliver only our best. Detail Blvd was founded by three professional detailers who were sick and tired of the sloppy workstyle seen in most of the industry. Your vehicle is an investment that should be taken care of. Not only are we specially trained and certified as detailers, most importantly we are fueled by our passion to create quality forms of art. 
+                                </p>
                         </div>
                         <div class="col-lg-4">
                             <h2>Innovation</h2>
                             <img src="images/project-management.svg" style="width: 30%">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, non illum! Vero
-                                magni saepe necessitatibus consequuntur, eveniet cupiditate non error iste rerum animi
-                                quasi eum mollitia officia voluptatum obcaecati vel.</p>
+                            <p>With our kind of passion when it comes to cars, we don’t settle for anything less than the most advanced detailing materials, products, systems and techniques. Detail Blvd is one of the only companies in Hawaii to be authorized by IGL Coating Systems to apply the world’s first and leading 10H ceramic coatings and products. We’re constantly keeping ourselves updated with the best practices because we love what we do. 
+
+                                </p>
                         </div>
                     </div>
                 </div>
@@ -153,13 +152,13 @@
                     <hr class="style18">
                     <div class="row">
                         <div class="col-lg-12 d-flex justify-content-center">
-                            <a href="">
+                            <a href="detail.html">
                                 <h2>Detailing</h1>
                             </a>
-                            <a href="">
+                            <a href="ceramic.html">
                                 <h2>Ceramic Coating</h1>
                             </a>
-                            <a href="">
+                            <a href="tint.html">
                                 <h2>Tinting</h2>
                             </a>
                         </div>
@@ -270,18 +269,18 @@
                                 </div>
                                 <div>
                                     <h5>Social</h5>
-                                    <div class="d-flex flex-row justify-content-between">
-                                        <div class="p-right">
+                                    <div class="d-flex flex-row ">
+                                        <div class="p-2">
                                             <a href="https://www.facebook.com/detailblvd/">
                                                 <i class="fab fa-facebook-square fa-3x"></i>
                                             </a>
                                         </div>
-                                        <div class="p-right">
+                                        <div class="p-2">
                                             <a href="https://www.instagram.com/detailblvd/">
                                                 <i class="fab fa-instagram fa-3x"></i>
                                             </a>
                                         </div>
-                                        <div class="p-right">
+                                        <div class="p-2">
                                             <a href="https://www.yelp.com/biz/detail-blvd-honolulu">
                                                 <i class="fab fa-yelp fa-3x"></i>
                                             </a>
