--- a/tint.html
+++ b/tint.html
@@ -96,20 +96,22 @@
                         <div>
                             <h5>Social</h5>
                             <div class="d-flex flex-row">
-                                <div class="p-right">
+                                <div class="p-2">
                                         <a href="https://www.facebook.com/detailblvd/">
                                                 <i class="fab fa-facebook-square fa-3x"></i>
                                             </a>
                                 </div>
-                                <div class="p-right">
+                                <div class="p-2">
                                         <a href="https://www.instagram.com/detailblvd/">
                                             <i class="fab fa-instagram fa-3x"></i>
                                         </a>
                                 </div>
-                                
-                                    <a href="https://www.yelp.com/biz/detail-blvd-honolulu">
+                                <div class="p-2">
+                                        <a href="https://www.yelp.com/biz/detail-blvd-honolulu">
                                             <i class="fab fa-yelp fa-3x"></i>
-                                        </a>    
+                                        </a> 
+                                </div>
+                                 
                             </div>
                         </div>
 
