--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                     <hr class="style18">
                     <div class="row">
                         <div class="col-lg-12 d-flex justify-content-center">
-                            <a href="detail.html">
+                            <a href="detail-blvd/detail.html">
                                 <h2>Detailing</h1>
                             </a>
-                            <a href="ceramic.html">
+                            <a href="detail-blvd/ceramic.html">
                                 <h2>Ceramic Coating</h1>
                             </a>
-                            <a href="tint.html">
+                            <a href="detail-blvd/tint.html">
                                 <h2>Tinting</h2>
                             </a>
                         </div>
