--- a/ceramic.html
+++ b/ceramic.html
@@ -88,19 +88,28 @@
         <hr class="style18">
         <div class=row>
             <div class="feature-box col-lg-4">
-                <h2>Investment</h2>
+                <h2 class="feature-header">AN INVESTMENT THAT LASTS
+                </h2>
                 <img src="images/coin.svg" style="width: 10rem">
-                <p style="text-align: justify">The coating will protect the vehicle’s exterior and interior from deteriorating for a lifetime. The resale market value will therefore be substantially higher! Ceramic Pro pays for itself in the end.</p>
+                <p class="content-text style="text-align: justify">With a coating that’s made to last, your vehicle’s exterior and interior will be protected for a lifetime. Not only will your car’s condition remain impressive, but its resale value will be substantially higher. 
+                </p>
             </div>
             <div class="feature-box col-lg-4">
-                <h2>Brand New Look</h2>
+                <h2 class="feature-header">SLICK NEW LOOK
+                </h2>
                 <img src="images/new.svg" style="width: 10rem">
-                <p style="text-align: justify">Once the coating is applied you will see a mirror effect, glossiness and color depth, incomparable to anything else! With proper maintenance your car’s finish will shine for many years to come.</p>
+                <p class="content-text style="text-align: justify">A look this good only comes with a world class coat that speaks for itself. Bring out your vehicle’s colors and top it off with timeless glossy finish for good.  
+                </p>
             </div>
             <div class="feature-box col-lg-4">
-                <h2>Easier Maintenance</h2>
-                <img src="images/maintenance.svg" style="width: 10rem">
-                <p style="text-align: justify">The slick coated surface won’t allow dirt, brake dust and tar to stick to your paint, wheels or glass. This makes washing your vehicle less labor intensive and less frequent. Waxing is now obsolete.</p>
+                <h2 class="feature-header">LESS MAINTENANCE, MORE SHINE 
+                </h2>
+                <div class="p-3">
+                    <img src="images/maintenance.svg" style="width: 10rem" class="">
+                </div>
+             
+                <p class="content-text style="text-align: justify">We double dare dirt, brake dust and tar to stick to your paint, wheels or glass. Your slick new surface acts as a non-stick shield to make washing easier, faster and less frequent. KENZO made waxing obsolete. 
+                </p>
             </div>
 
             <div class="col-lg-12">
@@ -119,13 +128,13 @@
                 <div class="col-lg-6">
                     <div class="d-flex flex-column align-items-center">
                         <div class="p-2">
-                            <h5>EXPERIENCE THE WORLDS FIRST 10H CERAMIC COATING.
-                                    NOTHING COMES CLOSE TO COMPARISON</h5>
+                            <h4 class="heading-text">EXPERIENCE THE WORLDS FIRST 10H CERAMIC COATING.
+                                    NOTHING COMES CLOSE TO COMPARISON</h4>
                         <div class="p-2">
                                 <hr class="style18">
                         </div>
                             <div class="p-2">
-                                    <p style="line-height: 1.8rem">Kenzo is a revolutionary paint protection coating that contains 100% silica providing the highest level of gloss and protection and is backed by an official warranty provided by IGL Coatings and supported by certified IGL Coatings Master Applicator. It forms a layer of thick coating that radiates a rich and natural glow reminiscence of a bespoke wax while providing unmatched protection. Running your hands across a Kenzo coated car is like touching the soft luxurious silk. It will never be the same again.</p>
+                                    <p class="content-text">Kenzo is a revolutionary paint protection coating that contains 100% silica providing the highest level of gloss and protection and is backed by an official warranty provided by IGL Coatings and supported by certified IGL Coatings Master Applicator. It forms a layer of thick coating that radiates a rich and natural glow reminiscence of a bespoke wax while providing unmatched protection. Running your hands across a Kenzo coated car is like touching the soft luxurious silk. It will never be the same again.</p>
                             </div>
                         </div>
                     </div>
