--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                                         Services
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="ceramic.html">Ceramic Coating</a>
+                                        <a class="dropdown-item" href="pages/ceramic.html">Ceramic Coating</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="detail.html">Detailing</a>
+                                        <a class="dropdown-item" href="pages/detail.html">Detailing</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="tint.html">Tinting</a>
+                                        <a class="dropdown-item" href="pages/tint.html">Tinting</a>
                                     </div>
                                 </li>
                             </ul>
@@ -99,7 +99,7 @@
                     <div class="buttons">
 
                         <a href="https://squareup.com/appointments/book/EN7CSGKBF88YV/detail-blvd-honolulu-hi"
-                            class="pricing-btn btn btn-dark btn-lg">Book Now</a>
+                            class="pricing-btn btn btn-dark btn-lg shadow">Book Now</a>
 
                     </div>
 
@@ -199,7 +199,7 @@
                                     <div>
                                         <a href="https://squareup.com/appointments/book/8f2e703a-0d84-4df8-88a7-7490e5cda4e7/EN7CSGKBF88YV/services"
                                             style=>
-                                            <button class="btn btn-light btn-lg">BOOK WITH MIKE LE</button>
+                                            <button class="btn btn-light btn-lg shadow">BOOK WITH MIKE LE</button>
                                         </a>
                                     </div>
                                 </div>
@@ -268,9 +268,9 @@
                                 <div>
                                     <h5>Services</h5>
                                     <div class="d-flex flex-column">
-                                        <a href="">Ceramic Coating</a>
-                                        <a href="">Tinting</a>
-                                        <a href="">Detailing</a>
+                                        <a href="pages/ceramic.html">Ceramic Coating</a>
+                                        <a href="pages/tint.html">Tinting</a>
+                                        <a href="pages/detail.html">Detailing</a>
                                         <div style="padding-top: 50%">
                                             &copy DetailBlvd 2019
                                         </div>
