--- a/pages/ceramic.html
+++ b/pages/ceramic.html
@@ -37,10 +37,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="detail-blvd/index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html#staff">Our Staff</a>
+                            <a class="nav-link" href="detail-bvld/index.html#staff">Our Staff</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -48,11 +48,11 @@
                                 Services
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/ceramic.html">Ceramic Coating</a>
+                                <a class="dropdown-item" href="pages/ceramic.html">Ceramic Coating</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/detail.html">Detailing</a>
+                                <a class="dropdown-item" href="pages/detail.html">Detailing</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/tint.html">Tinting</a>
+                                <a class="dropdown-item" href="pages/tint.html">Tinting</a>
                             </div>
                         </li>
                     </ul>
