--- a/pages/ceramic.html
+++ b/pages/ceramic.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
                 <a class="navbar-brand" href="/index.html">
-                    <img src="images/Detail BLVD logo WO.webp">
+                    <img src="../images/Detail BLVD logo WO.webp">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
