--- a/pages/ceramic.html
+++ b/pages/ceramic.html
@@ -25,7 +25,7 @@
     <section id="navbar">
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="/index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../images/Detail BLVD logo WO.webp">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -37,10 +37,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="detail-blvd/index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="detail-bvld/index.html#staff">Our Staff</a>
+                            <a class="nav-link" href="../index.html#staff">Our Staff</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -91,7 +91,7 @@
                 <div class="feature-box col-lg-4">
                     <h2 class="feature-header p-3">AN INVESTMENT THAT LASTS
                     </h2>
-                    <img src="images/coin.svg" style="width: 10rem">
+                    <img src="../images/coin.svg" style="width: 10rem">
                     <div class="p-3">
                             <p class="content-text style=" text-align: justify">With a coating that’s made to last, your
                                     vehicle’s exterior and interior will be protected for a lifetime. Not only will your car’s
@@ -103,7 +103,7 @@
                 <div class="feature-box col-lg-4">
                     <h2 class="feature-header p-3">SLICK NEW LOOK
                     </h2>
-                    <img src="images/new.svg" style="width: 10rem">
+                    <img src="../images/new.svg" style="width: 10rem">
                     <div class="p-3">
                             <p class="content-text style=" text-align: justify">A look this good only comes with a world class
                                     coat that speaks for itself. Bring out your vehicle’s colors and top it off with timeless glossy
@@ -116,7 +116,7 @@
                     <h2 class="feature-header p-3">LESS MAINTENANCE, MORE SHINE
                     </h2>
                     <div class="">
-                        <img src="images/maintenance.svg" style="width: 10rem" class="">
+                        <img src="../images/maintenance.svg" style="width: 10rem" class="">
                     </div>
                     <div class="p-2">
                             <p class="content-text">We double dare dirt, brake dust and tar to stick
@@ -164,10 +164,10 @@
                 <div class="col-lg-6">
                     <div class="d-flex flex-column align-items-center">
                         <div class="p-2">
-                            <img class="" src="images/igl-coating-logo.png">
+                            <img class="" src="../images/igl-coating-logo.png">
                         </div>
                         <div class="p-2">
-                            <img  src="images/kenzo-black-logo.png" alt="">
+                            <img  src="../images/kenzo-black-logo.png" alt="">
                         </div>
                     </div>
                 </div>
