--- a/pages/ceramic.html
+++ b/pages/ceramic.html
@@ -184,7 +184,7 @@
                     <div class="container">
                         <div class="d-flex flex-row justify-content-between">
                             <div>
-                                <img style="width: 9rem" src="images/Detail BLVD logo WO.webp">
+                                <img style="width: 9rem" src="../images/Detail BLVD logo WO.webp">
                                 <div class="d-flex flex-column">
                                     <div class="padding">
                                         1351 S BERETANIA ST.
