--- a/pages/ceramic.html
+++ b/pages/ceramic.html
@@ -50,9 +50,9 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/ceramic.html">Ceramic Coating</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="../detail.html">Detailing</a>
+                                <a class="dropdown-item" href="pages/detail.html">Detailing</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="../tint.html">Tinting</a>
+                                <a class="dropdown-item" href="pages/tint.html">Tinting</a>
                             </div>
                         </li>
                     </ul>
