--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                             class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/index.html#staff">Our Staff</a>
+                                    <a class="nav-link" href="#staff">Our Staff</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
