--- a/pages/tint.html
+++ b/pages/tint.html
@@ -14,18 +14,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
 </head>
 
 <body>
     <section id="navbar">
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="/index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="images/Detail BLVD logo WO.webp">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -37,10 +37,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html#staff">Our Staff</a>
+                            <a class="nav-link" href="../index.html#staff">Our Staff</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -48,11 +48,11 @@
                                 Services
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="pages/ceramic.html">Ceramic Coating</a>
+                                <a class="dropdown-item" href="ceramic.html">Ceramic Coating</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="pages/detail.html">Detailing</a>
+                                <a class="dropdown-item" href="detail.html">Detailing</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="pages/tint.html">Tinting</a>
+                                <a class="dropdown-item" href="tint.html">Tinting</a>
                             </div>
                         </li>
                     </ul>
@@ -75,7 +75,7 @@
                 <div class="col-lg-12">
                     <div class="d-flex flex-row justify-content-between">
                         <div>
-                            <img style="width: 9rem" src="images/Detail BLVD logo WO.webp">
+                            <img style="width: 9rem" src="..images/Detail BLVD logo WO.webp">
                             <div class="d-flex flex-column">
                                 <div class="padding">
                                     1351 S BERETANIA ST.
