--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section id="navbar">
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-                        <a class="navbar-brand" href="/index.html">
+                        <a class="navbar-brand" href="#">
                             <img src="images/Detail BLVD logo WO.webp">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
