--- a/pages/tint.html
+++ b/pages/tint.html
@@ -75,7 +75,7 @@
                 <div class="col-lg-12">
                     <div class="d-flex flex-row justify-content-between">
                         <div>
-                            <img style="width: 9rem" src="..images/Detail BLVD logo WO.webp">
+                            <img style="width: 9rem" src="../images/Detail BLVD logo WO.webp">
                             <div class="d-flex flex-column">
                                 <div class="padding">
                                     1351 S BERETANIA ST.
@@ -88,9 +88,9 @@
                         <div>
                             <h5>Services</h5>
                             <div class="d-flex flex-column">
-                                <a href="">Ceramic Coating</a>
-                                <a href="">Tinting</a>
-                                <a href="">Detailing</a>
+                                <a href="ceramic.html">Ceramic Coating</a>
+                                <a href="tint.html">Tinting</a>
+                                <a href="detail.html">Detailing</a>
                             </div>
                         </div>
                         <div>
