--- a/pages/detail.html
+++ b/pages/detail.html
@@ -41,7 +41,7 @@
                                             class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/index.html#staff">Our Staff</a>
+                                    <a class="nav-link" href="../index.html#staff">Our Staff</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
