--- a/pages/detail.html
+++ b/pages/detail.html
@@ -26,7 +26,7 @@
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
                         <a class="navbar-brand" href="../index.html">
-                            <img src="images/Detail BLVD logo WO.webp">
+                            <img src="../images/Detail BLVD logo WO.webp">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -97,21 +97,22 @@
                                     <div>
                                         <h5>Social</h5>
                                         <div class="d-flex flex-row">
-                                            <div class="p-right">
+                                            <div class="p-2">
                                                     <a href="https://www.facebook.com/detailblvd/">
                                                             <i class="fab fa-facebook-square fa-3x"></i>
                                                         </a>
                                             </div>
-                                            <div class="p-right">
+                                            <div class="p-2">
                                                     <a href="https://www.instagram.com/detailblvd/">
                                                         <i class="fab fa-instagram fa-3x"></i>
                                                     </a>
                                             </div>
-                                            <div>
+                                            <div class="p-2">
                                                     <a href="https://www.yelp.com/biz/detail-blvd-honolulu">
                                                         <i class="fab fa-yelp fa-3x"></i>
-                                                    </a>    
-                                                </div>
+                                                    </a> 
+                                            </div>
+                                             
                                         </div>
                                     </div>
             
