--- a/pages/ceramic.html
+++ b/pages/ceramic.html
@@ -105,7 +105,7 @@
                     </h2>
                     <img src="../images/new.svg" style="width: 10rem">
                     <div class="p-3">
-                            <p class="content-text style=" text-align: justify">A look this good only comes with a world class
+                            <p class="content-text style="text-align: justify">A look this good only comes with a world class
                                     coat that speaks for itself. Bring out your vehicle’s colors and top it off with timeless glossy
                                     finish for good.
                                 </p>
@@ -161,15 +161,15 @@
                     </div>
 
                 </div>
-                <div class="col-lg-6">
-                    <div class="d-flex flex-column align-items-center">
-                        <div class="p-2">
+                <div class="col-lg-6 d-flex flex-column align-items-xl-center">
+                        <div class="p-4"></div>
+                        <div class="p-4">
                             <img class="" src="../images/igl-coating-logo.png">
                         </div>
-                        <div class="p-2">
+                        <div class="p-4">
                             <img  src="../images/kenzo-black-logo.png" alt="">
                         </div>
-                    </div>
+                        
                 </div>
             </div>
 
