--- a/pages/ceramic.html
+++ b/pages/ceramic.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -58,7 +59,7 @@
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="" class="nav-link">Request a Quote</a>
+                            <a href="https://square.site/appointments/book/EN7CSGKBF88YV/detail-blvd-honolulu-hi" class="nav-link">Request a Quote</a>
 
                         </li>
                     </ul>
@@ -70,10 +71,13 @@
     </section>
 
     <section id="main">
+            <div class="header">
+                    <h1>Ceramic Coating</h1>
+            </div>
         <div class="container-fluid">
-            <h1>Ceramic Coating</h1>
-            <hr class="style18">
-            <iframe width="100%" height="500px" src="https://www.youtube.com/embed/MC3_HpAlNI4" frameborder="0"
+         <div id="bg" class="detail-header svg"></div>
+          
+            <iframe width="75%" height="565px" src="https://www.youtube.com/embed/MC3_HpAlNI4" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
@@ -128,7 +132,7 @@
                 </div>
 
                 <div class="col-lg-12">
-                    <a href="">
+                    <a href="https://square.site/appointments/book/EN7CSGKBF88YV/detail-blvd-honolulu-hi">
                         <button class="btn btn-dark btn-lg shadow">Request A Quote</button>
                     </a>
 
@@ -138,7 +142,7 @@
     </section>
 
     <section id="mission">
-        <div class="container-fluid">
+        <div class="detail-container container-fluid">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="d-flex flex-column align-items-center p-3">
@@ -151,7 +155,7 @@
                             <div class="p-2">
                                 <p class="content-text">KENZO glass coating has a minimum hardness of 10H – while the average rests between 2H and 4H. This means you’re getting the hardest glass coating on the entire market to protect your vehicle and its original paint like never before. If scratches do dare to leave a mark, it’ll come off easy with light polishing which won’t do any damage to the coat itself. Since we’re talking a 10H level, you can expect your paint to remain timeless and in mint condition due to the thick UV protection layer. 
                                 </p>
-                                <div class="p-2">
+                                <div class="">
                                 <p class="content-text">
                                     With nanotechnology in the works, you can bet every pore will be filled to give you that glossy, slick, and self-cleaning finish. It’ll be a real challenge for contaminants like dirt, tar, bird-droppings and even graffitti to hold on and stick to a 10H surface. Especially when it rains, water will curl and roll like beads – hence the self-cleaning effect. Less grime. Less hassle. A one-time permanent application and solution. It’s your call. 
                                 </p>
@@ -162,8 +166,8 @@
 
                 </div>
                 <div class="col-lg-6 d-flex flex-column align-items-xl-center">
-                        <div class="p-4"></div>
-                        <div class="p-4">
+                        <div class=""></div>
+                        <div class="">
                             <img class="" src="../images/igl-coating-logo.png">
                         </div>
                         <div class="p-4">
@@ -232,7 +236,7 @@
 
         </footer>
     </section>
-
+    <script src="../js/polybackground.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
